# bubblegum

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE_CHECKLIST.md  bubblegum.yaml  pyproject.toml
.github/workflows/: ci.yml  node-client.yml  npm-publish.yml  publish-check.yml  publish.yml
bubblegum/: __init__.py  pytest_plugin.py  session.py
bubblegum/adapters/: __init__.py  base.py
bubblegum/adapters/mobile/: __init__.py
bubblegum/adapters/web/: __init__.py
bubblegum/bdd/: __init__.py  dispatcher.py  fixtures.py  steps.py
bubblegum/bridge/: __init__.py  __main__.py  handlers.py  protocol.py  server.py  sessions.py
bubblegum/cli/: __init__.py  __main__.py  bridge.py  convert.py  record.py  repl.py
bubblegum/convert/: __init__.py  ai.py  engine.py  gherkin.py  ingest.py  models.py  normalize.py  profile.py  scaffold.py
bubblegum/convert/emitters/: __init__.py  dedup.py  feature.py  python_bdd.py  stepcall.py  ts_smart.py  tsdata.py  (+1 more)
bubblegum/core/: __init__.py  a11y.py  config.py  coordinates.py  cost.py  embedding_cache.py  flaky.py  llm_cache.py  network.py  observability.py  schemas.py  scope.py  sdk.py  table.py  visual.py  visual_image.py
bubblegum/reporting/: __init__.py  allure_report.py  explain.py  flaky_report.py  html_report.py  json_report.py  junit_report.py  suggested_fixes.py  summary_report.py
bubblegum/testing/: __init__.py  appium_driver.py  cloud.py  widget_lab.py
clients/node/: README.md  package-lock.json  package.json  tsconfig.cjs.json  tsconfig.json
docs/: HOW_TO_USE_MOBILE.md  HOW_TO_USE_TYPESCRIPT.md  HOW_TO_USE_WEB.md  IOS_PILOT_ATTACH_TO_WEBDRIVERIO.md  ROADMAP.md  USER_GUIDE.md  adoption.md  ai-grounding-enhancements.md  authoring-scenarios-style-guide.md  bridge-protocol.md  ci.md  coordinate-clicking.md  distribution-npm-and-pypi.md  enhancement-backlog-progress.md  getting-started-for-testers.md  manual-to-automation-converter.md  mobile-attach-existing-session.md  mobile-cloud.md  mobile-frameworks.md  mobile-network-conditions.md  phase-10j-post-ocr-mvp-verification.md  phase-11l-callable-vision-enablements.md  phase-17a-roadmap-reset-v0.0.5-alpha.md  phase-19b-object-intelligence-benchmark.md  phase-19f-object-intelligence-seed-spec.md  phase-19g-graph-query-planner-design.md  phase-19g-h-graph-query-post-merge-audit.md  phase-19g-relational-intent-design.md  phase-19m-android-system-dialog-safe-action-design.md  phase-19m-framework-detector-design.md  phase-19m-real-environment-smoke-harness-design.md  phase-19m-real-environment-validation-plan.md  phase-19m-system-dialog-handler-design.md  phase-19m-webview-context-switching-design.md  phase-19m-webview-real-switching-design-review.md  phase-19n-mobile-object-intelligence-consolidation-audit.md  phase-19n-mobile-scroll-resolver-integration-design.md  phase-20c-real-cloud-smoke-trial-runbook.md  phase-20d-real-pcloudy-smoke-trial-results.md  phase-20e-webview-switching-mvp-design-refresh.md  (+25 more)
examples/: README.md  appium_quickstart.py  bubblegum.convert.demo-example.yaml  bubblegum.convert.pph-example.yaml  bubblegum.convert.yaml  hybrid_web_mobile_example.py  make_sample_banking.py  make_sample_scenarios.py  ocr_callable_hydration_example.py  openai_vision_provider_manual_example.py  playwright_quickstart.py  report_artifacts_example.py  sample_scenarios_banking.xlsx  sample_scenarios_template.xlsx  test_real_web.py  test_real_web_form.py  vision_callable_provider_example.py  web_nl_quickstart.py
scripts/: run_benchmarks.py  run_mui_lab_regression.py  run_object_seed_diagnostics.py  run_webview_readiness_real_trials.sh  run_widget_lab_regression.py  smoke_examples.py  validate_package.py
tests/: README.md  conftest.py
tests/benchmarks/: README.md
tests/convert/: test_emitters.py  test_engine_cli.py  test_gherkin.py  test_normalize.py  test_ts_smart.py
tests/e2e/: test_phase3c_e2e_scaffold.py
tests/fixtures/: README.md
tests/integration/: test_a11y_web.py  test_auth_bootstrap_web.py  test_coordinate_click_web.py  test_custom_combobox_select_web.py  test_mobile_gestures_appium.py  test_mobile_network_conditions_appium.py  test_mobile_system_actions_appium.py  test_multi_select_web.py  test_nameless_combobox_web.py  test_network_assertions_web.py  test_nl_only_act.py  test_phase22e10_web_resilience_e2e.py  test_phase22e2_widget_lab_fixtures.py  test_phase22e3_probes_e2e.py  test_phase22e4_mui_lab.py  test_phase22e5_tier2_widgets.py  test_phase22e6_nav_wait_skip.py  test_phase22e7_browser_fixtures.py  test_phase22e8_mobile_fixture.py  test_phase22e9_sample_app.py  test_phase2_llm.py  test_phase3_memory.py  test_phase3c_integration_scaffold.py  test_phase4_appium.py  test_playwright_adapter.py  test_recorder_web.py  test_repl_web.py  test_stability_wait_web.py  test_suggested_fixes_web.py  test_table_action_web.py  test_table_assertions_web.py  test_ui_framework_appium.py  test_visual_web.py  test_web_resilience_e2e.py
tests/real_env/: README.md  config.example.yaml  conftest.py
tests/unit/: test_a11y.py  test_ai_first_grounding.py  test_allure_report.py  test_ambiguity_role_tiebreak.py  test_ant_nested_label_input.py  test_anthropic_provider.py  test_anthropic_vision_provider.py  test_async_resolver_contract.py  test_auth_bootstrap.py  test_bdd_dispatcher.py  test_bdd_pytest_integration.py  test_benchmark_fixture_schema.py  test_bridge.py  test_bridge_cdp.py  test_bridge_mobile_attach.py  test_checkbox_and_phrase_fallbacks.py  test_clickable_fallback.py  test_cloud_capabilities.py  test_collapse_expand.py  test_combobox_commit.py  test_combobox_filter.py  test_combobox_filter_and_picker_ok.py  test_config_wiring.py  test_coordinates.py  test_cost_and_llm_cache.py  test_custom_combobox_select.py  test_date_range_fallback.py  test_dialog_click_fallback.py  test_dropdown_select_relax.py  test_dry_run.py  test_dynamic_value_tokens.py  test_execution_failure_recovery.py  test_explain_report.py  test_flaky.py  test_hover_action.py  test_input_fallback.py  test_instruction_decompose.py  test_ios_hierarchy.py  test_json_report.py  test_junit_report.py  (+125 more)
(+187 files in other folders)
