[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bubblegum-ai"
version = "0.0.1"
description = "AI-powered recovery and natural-language execution layer for Playwright and Appium tests"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Bubblegum contributors" },
]
requires-python = ">=3.11"
dependencies = ["pydantic>=2.0", "pyyaml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]

[project.urls]
Homepage = "https://github.com/bubblegum-ai/bubblegum"
Repository = "https://github.com/bubblegum-ai/bubblegum"
Issues = "https://github.com/bubblegum-ai/bubblegum/issues"

[project.optional-dependencies]
test = ["pytest-asyncio"]
web = ["playwright"]
mobile = ["Appium-Python-Client"]
dev = ["pytest-asyncio"]
all = ["playwright", "Appium-Python-Client", "pytest-asyncio"]

[project.entry-points.pytest11]
bubblegum = "bubblegum.pytest_plugin"

[tool.setuptools.packages.find]
where = ["."]
include = ["bubblegum*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "llm: marks tests that call the real LLM API",
    "memory: marks tests that require disk-backed memory fixtures",
    "appium: marks tests that require Appium server/device",
    "playwright: marks tests that require Playwright/browser setup",
    "e2e: marks optional end-to-end tests",
]
