[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bubblegum-ai"
version = "0.0.5a0"
description = "AI-powered recovery and natural-language execution layer for Playwright and Appium tests"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Bubblegum contributors" },
]
requires-python = ">=3.11"
dependencies = ["pydantic>=2.0", "pyyaml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]

[project.urls]
Homepage = "https://github.com/bubblegum-ai/bubblegum"
Repository = "https://github.com/bubblegum-ai/bubblegum"
Issues = "https://github.com/bubblegum-ai/bubblegum/issues"

[project.optional-dependencies]
test = ["pytest-asyncio"]
web = ["playwright"]
mobile = ["Appium-Python-Client"]
anthropic = ["anthropic>=0.20"]
bdd = ["pytest-bdd>=7"]
dev = ["pytest-asyncio", "anthropic>=0.20"]
all = ["playwright", "Appium-Python-Client", "anthropic>=0.20", "pytest-asyncio", "pytest-bdd>=7"]

[project.entry-points.pytest11]
bubblegum = "bubblegum.pytest_plugin"

[tool.setuptools.packages.find]
where = ["."]
include = ["bubblegum*"]

[tool.setuptools.package-data]
# Ship the quickstart sample pages inside the wheel so pip-installed users get
# the widget_lab / sample_app fixtures without a repository checkout.
"bubblegum.testing" = ["pages/**/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
markers = [
    "asyncio: marks tests that run with asyncio support",
    "llm: marks tests that call the real LLM API",
    "memory: marks tests that require disk-backed memory fixtures",
    "appium: marks tests that require Appium server/device",
    "playwright: marks tests that require Playwright/browser setup",
    "e2e: marks optional end-to-end tests",
    "real_env: marks real-environment smoke harness tests",
    "web_smoke: marks web smoke scenarios",
    "android_emulator: marks Android emulator smoke scenarios",
    "ios_simulator: marks iOS simulator smoke scenarios",
    "android_device: marks Android physical device smoke scenarios",
    "ios_device: marks iOS physical device smoke scenarios",
    "cloud_device: marks cloud device/browser smoke scenarios",
    "hybrid_webview: marks hybrid/WebView metadata smoke scenarios",
    "system_dialog: marks system-dialog smoke scenarios",
    "slow: marks extended-duration smoke scenarios",
    "bubblegum: marks tests that use Bubblegum pytest fixtures (web/mobile)",
]
