[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bubblegum-ai"
version = "0.0.6a34"
description = "AI-powered recovery and natural-language execution layer for Playwright and Appium tests"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Bubblegum contributors" },
]
requires-python = ">=3.11"
dependencies = ["pydantic>=2.0", "pyyaml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]

[project.urls]
Homepage = "https://github.com/bishnu133/bubblegum"
Repository = "https://github.com/bishnu133/bubblegum"
Issues = "https://github.com/bishnu133/bubblegum/issues"

[project.optional-dependencies]
test = ["pytest-asyncio"]
web = ["playwright"]
mobile = ["Appium-Python-Client"]
anthropic = ["anthropic>=0.20"]
bdd = ["pytest-bdd>=7"]
convert = ["openpyxl>=3.1"]
# Bubblegum writes Allure result files with the standard library alone; this
# extra only pulls allure-pytest for teams who also want its native fixtures.
# Viewing results needs the `allure` command-line tool (installed separately).
allure = ["allure-pytest>=2.13"]
# Accessibility assertions ship a vendored axe-core build (no extra package is
# needed for axe itself); this extra just guarantees the web/browser stack the
# a11y check runs against.
a11y = ["playwright"]
# Visual regression assertions decode/encode PNGs with Pillow; the pure pixel
# math is stdlib. Needs the web stack to capture screenshots.
visual = ["playwright", "Pillow>=9"]
dev = ["pytest-asyncio", "anthropic>=0.20", "Pillow>=9", "openpyxl>=3.1"]
all = ["playwright", "Appium-Python-Client", "anthropic>=0.20", "pytest-asyncio", "pytest-bdd>=7", "Pillow>=9", "openpyxl>=3.1"]

[project.entry-points.pytest11]
bubblegum = "bubblegum.pytest_plugin"

[project.scripts]
bubblegum = "bubblegum.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bubblegum*"]

[tool.setuptools.package-data]
# Ship the quickstart sample pages inside the wheel so pip-installed users get
# the widget_lab / sample_app fixtures without a repository checkout.
# Also ship the vendored axe-core build (+ its NOTICE) used by a11y assertions.
"bubblegum.testing" = ["pages/**/*.html", "vendor/axe-core/axe.min.js", "vendor/axe-core/NOTICE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
markers = [
    "asyncio: marks tests that run with asyncio support",
    "llm: marks tests that call the real LLM API",
    "memory: marks tests that require disk-backed memory fixtures",
    "appium: marks tests that require Appium server/device",
    "playwright: marks tests that require Playwright/browser setup",
    "e2e: marks optional end-to-end tests",
    "real_env: marks real-environment smoke harness tests",
    "web_smoke: marks web smoke scenarios",
    "android_emulator: marks Android emulator smoke scenarios",
    "ios_simulator: marks iOS simulator smoke scenarios",
    "android_device: marks Android physical device smoke scenarios",
    "ios_device: marks iOS physical device smoke scenarios",
    "cloud_device: marks cloud device/browser smoke scenarios",
    "hybrid_webview: marks hybrid/WebView metadata smoke scenarios",
    "system_dialog: marks system-dialog smoke scenarios",
    "slow: marks extended-duration smoke scenarios",
    "bubblegum: marks tests that use Bubblegum pytest fixtures (web/mobile)",
]
